--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="nl">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Checklist App</title>
+    <title>Puntenlijst A4.3</title>
     <script src="script.js" defer></script>
     <style>
         body {
@@ -40,21 +40,75 @@
             margin-right: 1rem;
         }
 
-        .save-message {
+        .screenshot {
             text-align: center;
-            color: green;
-            font-weight: bold;
-            display: none;
+            margin-top: 2rem;
+        }
+
+        .screenshot img {
+            max-width: 100%;
+            height: auto;
+            border-radius: 0.5rem;
+            box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+        }
+
+        .nav-button {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            padding: 10px;
+            background: #007BFF;
+            color: white;
+            text-decoration: none;
+            border-radius: 5px;
+            width: 150px;
+            font-size: 1rem;
+            text-align: center;
+            margin-left: auto;
+            margin-right: auto;
+        }
+
+        .nav-button:hover {
+            background: #0056b3;
+        }
+
+        .small-button {
+            width: 40px;
+            height: 40px;
+            font-size: 1.2rem;
+            margin-left: auto;
         }
     </style>
 </head>
 <body>
-    <h1>Checklist App</h1>
-    <p class="save-message" id="saveMessage">✔ Checklist saved!</p>
+    <h1>Puntenlijst A4.3</h1>
     <ul class="checklist" id="checklist">
-        <li class="checklist-item"><input type="checkbox" id="item-1"> <label for="item-1">Task 1</label></li>
-        <li class="checklist-item"><input type="checkbox" id="item-2"> <label for="item-2">Task 2</label></li>
-        <li class="checklist-item"><input type="checkbox" id="item-3"> <label for="item-3">Task 3</label></li>
+        <li class="checklist-item"><input type="checkbox" id="1.01"> <label for="1.01">1.01 - Meterstanden</label><a class="nav-button small-button" href="#img-1.01">↓</a></li>
+        <li class="checklist-item"><input type="checkbox" id="1.02"> <label for="1.02">1.02 - Bijwerken schilderwerken zie gele tape</label><a class="nav-button small-button" href="#img-1.02">↓</a></li>
+        <li class="checklist-item"><input type="checkbox" id="1.03"> <label for="1.03">1.03 - Schakelaar staat scheef</label><a class="nav-button small-button" href="#img-1.03">↓</a></li>
+        <li class="checklist-item"><input type="checkbox" id="1.04"> <label for="1.04">1.04 - Lichtpunt werkt niet</label><a class="nav-button small-button" href="#img-1.04">↓</a></li>
     </ul>
+
+    <!-- Screenshots -->
+    <div class="screenshot" id="img-1.01">
+        <h2>1.01 - Meterstanden</h2>
+        <img src="images/1.01.png" alt="Screenshot 1.01">
+        <a class="nav-button" href="#">Naar boven ↑</a>
+    </div>
+    <div class="screenshot" id="img-1.02">
+        <h2>1.02 - Bijwerken schilderwerken zie gele tape</h2>
+        <img src="images/1.02.png" alt="Screenshot 1.02">
+        <a class="nav-button" href="#">Naar boven ↑</a>
+    </div>
+    <div class="screenshot" id="img-1.03">
+        <h2>1.03 - Schakelaar staat scheef</h2>
+        <img src="images/1.03.png" alt="Screenshot 1.03">
+        <a class="nav-button" href="#">Naar boven ↑</a>
+    </div>
+    <div class="screenshot" id="img-1.04">
+        <h2>1.04 - Lichtpunt werkt niet</h2>
+        <img src="images/1.04.png" alt="Screenshot 1.04">
+        <a class="nav-button" href="#">Naar boven ↑</a>
+    </div>
 </body>
 </html>
