--- a/index.html
+++ b/index.html
@@ -61,32 +61,24 @@
             color: white;
             text-decoration: none;
             border-radius: 5px;
-            width: 150px;
-            font-size: 1rem;
+            width: 40px;
+            height: 40px;
+            font-size: 1.2rem;
             text-align: center;
-            margin-left: auto;
-            margin-right: auto;
         }
 
         .nav-button:hover {
             background: #0056b3;
-        }
-
-        .small-button {
-            width: 40px;
-            height: 40px;
-            font-size: 1.2rem;
-            margin-left: auto;
         }
     </style>
 </head>
 <body>
     <h1>Puntenlijst A4.3</h1>
     <ul class="checklist" id="checklist">
-        <li class="checklist-item"><input type="checkbox" id="1.01"> <label for="1.01">1.01 - Meterstanden</label><a class="nav-button small-button" href="#img-1.01">↓</a></li>
-        <li class="checklist-item"><input type="checkbox" id="1.02"> <label for="1.02">1.02 - Bijwerken schilderwerken zie gele tape</label><a class="nav-button small-button" href="#img-1.02">↓</a></li>
-        <li class="checklist-item"><input type="checkbox" id="1.03"> <label for="1.03">1.03 - Schakelaar staat scheef</label><a class="nav-button small-button" href="#img-1.03">↓</a></li>
-        <li class="checklist-item"><input type="checkbox" id="1.04"> <label for="1.04">1.04 - Lichtpunt werkt niet</label><a class="nav-button small-button" href="#img-1.04">↓</a></li>
+        <li class="checklist-item"><input type="checkbox" id="1.01"> <label for="1.01">1.01 - Meterstanden</label><a class="nav-button" href="#img-1.01">↓</a></li>
+        <li class="checklist-item"><input type="checkbox" id="1.02"> <label for="1.02">1.02 - Bijwerken schilderwerken zie gele tape</label><a class="nav-button" href="#img-1.02">↓</a></li>
+        <li class="checklist-item"><input type="checkbox" id="1.03"> <label for="1.03">1.03 - Schakelaar staat scheef</label><a class="nav-button" href="#img-1.03">↓</a></li>
+        <li class="checklist-item"><input type="checkbox" id="1.04"> <label for="1.04">1.04 - Lichtpunt werkt niet</label><a class="nav-button" href="#img-1.04">↓</a></li>
     </ul>
 
     <!-- Screenshots -->
