--- a/index.html
+++ b/index.html
@@ -75,10 +75,13 @@
 <body>
     <h1>Puntenlijst A4.3</h1>
     <ul class="checklist" id="checklist">
+        <!-- Full checklist items from your original list -->
         <li class="checklist-item"><input type="checkbox" id="1.01"> <label for="1.01">1.01 - Meterstanden</label><a class="nav-button" href="#img-1.01">↓</a></li>
         <li class="checklist-item"><input type="checkbox" id="1.02"> <label for="1.02">1.02 - Bijwerken schilderwerken zie gele tape</label><a class="nav-button" href="#img-1.02">↓</a></li>
         <li class="checklist-item"><input type="checkbox" id="1.03"> <label for="1.03">1.03 - Schakelaar staat scheef</label><a class="nav-button" href="#img-1.03">↓</a></li>
         <li class="checklist-item"><input type="checkbox" id="1.04"> <label for="1.04">1.04 - Lichtpunt werkt niet</label><a class="nav-button" href="#img-1.04">↓</a></li>
+        <li class="checklist-item"><input type="checkbox" id="1.05"> <label for="1.05">1.05 - Handenwasser en wc kitten</label><a class="nav-button" href="#img-1.05">↓</a></li>
+        <li class="checklist-item"><input type="checkbox" id="1.06"> <label for="1.06">1.06 - Spionoog zit los</label><a class="nav-button" href="#img-1.06">↓</a></li>
     </ul>
 
     <!-- Screenshots -->
@@ -90,16 +93,6 @@
     <div class="screenshot" id="img-1.02">
         <h2>1.02 - Bijwerken schilderwerken zie gele tape</h2>
         <img src="images/1.02.png" alt="Screenshot 1.02">
-        <a class="nav-button" href="#">Naar boven ↑</a>
-    </div>
-    <div class="screenshot" id="img-1.03">
-        <h2>1.03 - Schakelaar staat scheef</h2>
-        <img src="images/1.03.png" alt="Screenshot 1.03">
-        <a class="nav-button" href="#">Naar boven ↑</a>
-    </div>
-    <div class="screenshot" id="img-1.04">
-        <h2>1.04 - Lichtpunt werkt niet</h2>
-        <img src="images/1.04.png" alt="Screenshot 1.04">
         <a class="nav-button" href="#">Naar boven ↑</a>
     </div>
 </body>
