--- a/index.html
+++ b/index.html
@@ -5,87 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Puntenlijst A4.3</title>
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
-  <script src="script.js"></script>
+  <script src="script.js" defer></script>
   <script type="module" src="https://cdn.jsdelivr.net/npm/@shoelace-style/shoelace@2.14.0/dist/shoelace.js"></script>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@shoelace-style/shoelace@2.14.0/dist/themes/light.css" />
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      padding: 2rem;
-      max-width: 800px;
-      margin: auto;
-      background-color: #f9f9f9;
-    }
-
-    h1 {
-      text-align: center;
-    }
-
-    .checklist {
-      list-style: none;
-      padding: 0;
-    }
-
-    .checklist-item {
-      background: white;
-      margin-bottom: 10px;
-      padding: 1rem;
-      border-radius: 0.5rem;
-      box-shadow: 0 1px 3px rgba(0,0,0,0.1);
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      font-size: 1.1rem;
-    }
-
-    .checklist-item label {
-      flex-grow: 1;
-    }
-
-    .checklist-item input[type="checkbox"] {
-      transform: scale(1.5);
-      margin-right: 1rem;
-    }
-
-    .screenshot {
-      text-align: center;
-      margin-top: 2rem;
-    }
-
-    .screenshot img {
-      max-width: 100%;
-      height: auto;
-      border-radius: 0.5rem;
-      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-    }
-
-    .nav-button {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      padding: 10px;
-      background: #007BFF;
-      color: white;
-      text-decoration: none;
-      border-radius: 5px;
-      width: 150px;
-      font-size: 1rem;
-      text-align: center;
-      margin-left: auto;
-      margin-right: auto;
-    }
-
-    .nav-button:hover {
-      background: #0056b3;
-    }
-
-    .small-button {
-      width: 40px;
-      height: 40px;
-      font-size: 1.2rem;
-      margin-left: auto; /* Zorgt ervoor dat de knop helemaal rechts staat */
-    }
-  </style>
+  <link rel="stylesheet" href="styles.css" /> <!-- Load external CSS -->
 </head>
 <body>
   <h1>Puntenlijst A4.3</h1>
