--- a/index.html
+++ b/index.html
@@ -4,102 +4,11 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Puntenlijst A4.3</title>
+  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
+  <script src="script.js" defer></script>
   <script type="module" src="https://cdn.jsdelivr.net/npm/@shoelace-style/shoelace@2.14.0/dist/shoelace.js"></script>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@shoelace-style/shoelace@2.14.0/dist/themes/light.css" />
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      padding: 2rem;
-      max-width: 800px;
-      margin: auto;
-      background-color: #f9f9f9;
-    }
-
-    h1 {
-      text-align: center;
-    }
-
-    .checklist {
-      list-style: none;
-      padding: 0;
-    }
-
-    .checklist-item {
-      background: white;
-      margin-bottom: 10px;
-      padding: 1rem;
-      border-radius: 0.5rem;
-      box-shadow: 0 1px 3px rgba(0,0,0,0.1);
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      font-size: 1.1rem;
-    }
-
-    .checklist-item label {
-      flex-grow: 1;
-    }
-
-    .checklist-item input[type="checkbox"] {
-      transform: scale(1.5);
-      margin-right: 1rem;
-    }
-
-    .screenshot {
-      text-align: center;
-      margin-top: 2rem;
-    }
-
-    .screenshot img {
-      max-width: 100%;
-      height: auto;
-      border-radius: 0.5rem;
-      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-    }
-
-    .nav-button {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      padding: 10px;
-      background: #007BFF;
-      color: white;
-      text-decoration: none;
-      border-radius: 5px;
-      width: 150px;
-      font-size: 1rem;
-      text-align: center;
-      margin-left: auto;
-      margin-right: auto;
-    }
-
-    .nav-button:hover {
-      background: #0056b3;
-    }
-
-    .small-button {
-      width: 40px;
-      height: 40px;
-      font-size: 1.2rem;
-      margin-left: auto; /* Zorgt ervoor dat de knop helemaal rechts staat */
-    }
-  </style>
-
-  <!-- GLightbox CDN -->
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/glightbox/dist/css/glightbox.min.css" />
-  <script src="https://cdn.jsdelivr.net/npm/glightbox/dist/js/glightbox.min.js" defer></script>
-
-  <!-- Init GLightbox -->
-  <script defer>
-    document.addEventListener("DOMContentLoaded", function () {
-      GLightbox({
-        selector: ".glightbox",
-        touchNavigation: true,
-        loop: true,
-        zoomable: true
-      });
-    });
-  </script>
+  <link rel="stylesheet" href="styles.css" /> <!-- Load external CSS -->
 </head>
 <body>
   <h1>Puntenlijst A4.3</h1>
@@ -293,189 +202,188 @@
 
   <div class="screenshot" id="img-1.01">
     <h2>1.01 - Meterstanden</h2>
-    <a href="images/2012- 4.3 Puntenlijst VO - update_Page_04.png" class="glightbox" data-gallery="screens"><img src="images/2012- 4.3 Puntenlijst VO - update_Page_04.png" alt="Screenshot 1.01" /></a>
+    <img src="images/2012- 4.3 Puntenlijst VO - update_Page_04.png" alt="Screenshot 1.01" />
     <a class="nav-button" href="#">Naar boven ↑</a>
   </div>
   <div class="screenshot" id="img-1.02">
     <h2>1.02 - Bijwerken schilderwerken zie gele tape</h2>
-    <a href="images/2012- 4.3 Puntenlijst VO - update_Page_04.png" class="glightbox" data-gallery="screens"><img src="images/2012- 4.3 Puntenlijst VO - update_Page_04.png" alt="Screenshot 1.02" /></a>
+    <img src="images/2012- 4.3 Puntenlijst VO - update_Page_04.png" alt="Screenshot 1.02" />
     <a class="nav-button" href="#">Naar boven ↑</a>
   </div>
   <div class="screenshot" id="img-1.03">
     <h2>1.03 - Schakelaar staat scheef</h2>
-    <a href="images/2012- 4.3 Puntenlijst VO - update_Page_05.png" class="glightbox" data-gallery="screens"><img src="images/2012- 4.3 Puntenlijst VO - update_Page_05.png" alt="Screenshot 1.03" /></a>
+    <img src="images/2012- 4.3 Puntenlijst VO - update_Page_05.png" alt="Screenshot 1.03" />
     <a class="nav-button" href="#">Naar boven ↑</a>
   </div>
   <div class="screenshot" id="img-1.04">
     <h2>1.04 - Lichtpunt werkt niet</h2>
-    <a href="images/2012- 4.3 Puntenlijst VO - update_Page_05.png" class="glightbox" data-gallery="screens"><img src="images/2012- 4.3 Puntenlijst VO - update_Page_05.png" alt="Screenshot 1.04" /></a>
+    <img src="images/2012- 4.3 Puntenlijst VO - update_Page_05.png" alt="Screenshot 1.04" />
     <a class="nav-button" href="#">Naar boven ↑</a>
   </div>
   <div class="screenshot" id="img-1.05">
     <h2>1.05 - Handenwasser en wc kitten</h2>
-    <a href="images/2012- 4.3 Puntenlijst VO - update_Page_06.png" class="glightbox" data-gallery="screens"><img src="images/2012- 4.3 Puntenlijst VO - update_Page_06.png" alt="Screenshot 1.05" /></a>
+    <img src="images/2012- 4.3 Puntenlijst VO - update_Page_06.png" alt="Screenshot 1.05" />
     <a class="nav-button" href="#">Naar boven ↑</a>
   </div>
   <div class="screenshot" id="img-1.06">
     <h2>1.06 - Spionoog zit los</h2>
-    <a href="images/2012- 4.3 Puntenlijst VO - update_Page_06.png" class="glightbox" data-gallery="screens"><img src="images/2012- 4.3 Puntenlijst VO - update_Page_06.png" alt="Screenshot 1.06" /></a>
+    <img src="images/2012- 4.3 Puntenlijst VO - update_Page_06.png" alt="Screenshot 1.06" />
     <a class="nav-button" href="#">Naar boven ↑</a>
   </div>
   <div class="screenshot" id="img-1.07">
     <h2>1.07 - Bovenkant plint bijschilderen (algemeen)</h2>
-    <a href="images/2012- 4.3 Puntenlijst VO - update_Page_07.png" class="glightbox" data-gallery="screens"><img src="images/2012- 4.3 Puntenlijst VO - update_Page_07.png" alt="Screenshot 1.07" /></a>
+    <img src="images/2012- 4.3 Puntenlijst VO - update_Page_07.png" alt="Screenshot 1.07" />
     <a class="nav-button" href="#">Naar boven ↑</a>
   </div>
   <div class="screenshot" id="img-1.08">
     <h2>1.08 - Vlek binnenkant glas?</h2>
-    <a href="images/2012- 4.3 Puntenlijst VO - update_Page_07.png" class="glightbox" data-gallery="screens"><img src="images/2012- 4.3 Puntenlijst VO - update_Page_07.png" alt="Screenshot 1.08" /></a>
+    <img src="images/2012- 4.3 Puntenlijst VO - update_Page_07.png" alt="Screenshot 1.08" />
     <a class="nav-button" href="#">Naar boven ↑</a>
   </div>
   <div class="screenshot" id="img-1.09">
     <h2>1.09 - Deur sluit niet</h2>
-    <a href="images/2012- 4.3 Puntenlijst VO - update_Page_08.png" class="glightbox" data-gallery="screens"><img src="images/2012- 4.3 Puntenlijst VO - update_Page_08.png" alt="Screenshot 1.09" /></a>
+    <img src="images/2012- 4.3 Puntenlijst VO - update_Page_08.png" alt="Screenshot 1.09" />
     <a class="nav-button" href="#">Naar boven ↑</a>
   </div>
   <div class="screenshot" id="img-1.10">
     <h2>1.10 - Ventiel recht hangen</h2>
-    <a href="images/2012- 4.3 Puntenlijst VO - update_Page_08.png" class="glightbox" data-gallery="screens"><img src="images/2012- 4.3 Puntenlijst VO - update_Page_08.png" alt="Screenshot 1.10" /></a>
+    <img src="images/2012- 4.3 Puntenlijst VO - update_Page_08.png" alt="Screenshot 1.10" />
     <a class="nav-button" href="#">Naar boven ↑</a>
   </div>
   <div class="screenshot" id="img-1.11">
     <h2>1.11 - Wastafel kitten</h2>
-    <a href="images/2012- 4.3 Puntenlijst VO - update_Page_09.png" class="glightbox" data-gallery="screens"><img src="images/2012- 4.3 Puntenlijst VO - update_Page_09.png" alt="Screenshot 1.11" /></a>
+    <img src="images/2012- 4.3 Puntenlijst VO - update_Page_09.png" alt="Screenshot 1.11" />
     <a class="nav-button" href="#">Naar boven ↑</a>
   </div>
   <div class="screenshot" id="img-1.12">
     <h2>1.12 - Douchezuil hangt niet vast</h2>
-    <a href="images/2012- 4.3 Puntenlijst VO - update_Page_09.png" class="glightbox" data-gallery="screens"><img src="images/2012- 4.3 Puntenlijst VO - update_Page_09.png" alt="Screenshot 1.12" /></a>
+    <img src="images/2012- 4.3 Puntenlijst VO - update_Page_09.png" alt="Screenshot 1.12" />
     <a class="nav-button" href="#">Naar boven ↑</a>
   </div>
   <div class="screenshot" id="img-1.13">
     <h2>1.13 - Afwerking plint tegen douche</h2>
-    <a href="images/2012- 4.3 Puntenlijst VO - update_Page_10.png" class="glightbox" data-gallery="screens"><img src="images/2012- 4.3 Puntenlijst VO - update_Page_10.png" alt="Screenshot 1.13" /></a>
+    <img src="images/2012- 4.3 Puntenlijst VO - update_Page_10.png" alt="Screenshot 1.13" />
     <a class="nav-button" href="#">Naar boven ↑</a>
   </div>
   <div class="screenshot" id="img-1.14">
     <h2>1.14 - Vloer nog poetsen</h2>
-    <a href="images/2012- 4.3 Puntenlijst VO - update_Page_10.png" class="glightbox" data-gallery="screens"><img src="images/2012- 4.3 Puntenlijst VO - update_Page_10.png" alt="Screenshot 1.14" /></a>
+    <img src="images/2012- 4.3 Puntenlijst VO - update_Page_10.png" alt="Screenshot 1.14" />
     <a class="nav-button" href="#">Naar boven ↑</a>
   </div>
   <div class="screenshot" id="img-1.15">
     <h2>1.15 - Dorpel reinigen en moer verwijderen</h2>
-    <a href="images/2012- 4.3 Puntenlijst VO - update_Page_11.png" class="glightbox" data-gallery="screens"><img src="images/2012- 4.3 Puntenlijst VO - update_Page_11.png" alt="Screenshot 1.15" /></a>
+    <img src="images/2012- 4.3 Puntenlijst VO - update_Page_11.png" alt="Screenshot 1.15" />
     <a class="nav-button" href="#">Naar boven ↑</a>
   </div>
   <div class="screenshot" id="img-1.17">
     <h2>1.17 - Kras op raamprofiel</h2>
-    <a href="images/2012- 4.3 Puntenlijst VO - update_Page_11.png" class="glightbox" data-gallery="screens"><img src="images/2012- 4.3 Puntenlijst VO - update_Page_11.png" alt="Screenshot 1.17" /></a>
+    <img src="images/2012- 4.3 Puntenlijst VO - update_Page_11.png" alt="Screenshot 1.17" />
     <a class="nav-button" href="#">Naar boven ↑</a>
   </div>
   <div class="screenshot" id="img-1.18">
     <h2>1.18 - Werkblad en achterwand kitten</h2>
-    <a href="images/2012- 4.3 Puntenlijst VO - update_Page_12.png" class="glightbox" data-gallery="screens"><img src="images/2012- 4.3 Puntenlijst VO - update_Page_12.png" alt="Screenshot 1.18" /></a>
+    <img src="images/2012- 4.3 Puntenlijst VO - update_Page_12.png" alt="Screenshot 1.18" />
     <a class="nav-button" href="#">Naar boven ↑</a>
   </div>
   <div class="screenshot" id="img-1.19">
     <h2>1.19 - Deur beschadigd</h2>
-    <a href="images/2012- 4.3 Puntenlijst VO - update_Page_12.png" class="glightbox" data-gallery="screens"><img src="images/2012- 4.3 Puntenlijst VO - update_Page_12.png" alt="Screenshot 1.19" /></a>
+    <img src="images/2012- 4.3 Puntenlijst VO - update_Page_12.png" alt="Screenshot 1.19" />
     <a class="nav-button" href="#">Naar boven ↑</a>
   </div>
   <div class="screenshot" id="img-1.20">
     <h2>1.20 - Afdek schroef ontbreekt</h2>
-    <a href="images/2012- 4.3 Puntenlijst VO - update_Page_13.png" class="glightbox" data-gallery="screens"><img src="images/2012- 4.3 Puntenlijst VO - update_Page_13.png" alt="Screenshot 1.20" /></a>
+    <img src="images/2012- 4.3 Puntenlijst VO - update_Page_13.png" alt="Screenshot 1.20" />
     <a class="nav-button" href="#">Naar boven ↑</a>
   </div>
   <div class="screenshot" id="img-1.21">
     <h2>1.21 - Ventiel recht hangen</h2>
-    <a href="images/2012- 4.3 Puntenlijst VO - update_Page_13.png" class="glightbox" data-gallery="screens"><img src="images/2012- 4.3 Puntenlijst VO - update_Page_13.png" alt="Screenshot 1.21" /></a>
+    <img src="images/2012- 4.3 Puntenlijst VO - update_Page_13.png" alt="Screenshot 1.21" />
     <a class="nav-button" href="#">Naar boven ↑</a>
   </div>
   <div class="screenshot" id="img-1.22">
     <h2>1.22 - Schakelaars staan scheef</h2>
-    <a href="images/2012- 4.3 Puntenlijst VO - update_Page_14.png" class="glightbox" data-gallery="screens"><img src="images/2012- 4.3 Puntenlijst VO - update_Page_14.png" alt="Screenshot 1.22" /></a>
+    <img src="images/2012- 4.3 Puntenlijst VO - update_Page_14.png" alt="Screenshot 1.22" />
     <a class="nav-button" href="#">Naar boven ↑</a>
   </div>
   <div class="screenshot" id="img-1.23">
     <h2>1.23 - Schakelaar staat open</h2>
-    <a href="images/2012- 4.3 Puntenlijst VO - update_Page_14.png" class="glightbox" data-gallery="screens"><img src="images/2012- 4.3 Puntenlijst VO - update_Page_14.png" alt="Screenshot 1.23" /></a>
+    <img src="images/2012- 4.3 Puntenlijst VO - update_Page_14.png" alt="Screenshot 1.23" />
     <a class="nav-button" href="#">Naar boven ↑</a>
   </div>
   <div class="screenshot" id="img-1.24">
     <h2>1.24 - Krassen in glas</h2>
-    <a href="images/2012- 4.3 Puntenlijst VO - update_Page_15.png" class="glightbox" data-gallery="screens"><img src="images/2012- 4.3 Puntenlijst VO - update_Page_15.png" alt="Screenshot 1.24" /></a>
+    <img src="images/2012- 4.3 Puntenlijst VO - update_Page_15.png" alt="Screenshot 1.24" />
     <a class="nav-button" href="#">Naar boven ↑</a>
   </div>
   <div class="screenshot" id="img-1.25">
     <h2>1.25 - Turbo stand ventilatie werkt niet</h2>
-    <a href="images/2012- 4.3 Puntenlijst VO - update_Page_15.png" class="glightbox" data-gallery="screens"><img src="images/2012- 4.3 Puntenlijst VO - update_Page_15.png" alt="Screenshot 1.25" /></a>
+    <img src="images/2012- 4.3 Puntenlijst VO - update_Page_15.png" alt="Screenshot 1.25" />
     <a class="nav-button" href="#">Naar boven ↑</a>
   </div>
   <div class="screenshot" id="img-1.26">
     <h2>1.26 - Kras op raamprofiel</h2>
-    <a href="images/2012- 4.3 Puntenlijst VO - update_Page_16.png" class="glightbox" data-gallery="screens"><img src="images/2012- 4.3 Puntenlijst VO - update_Page_16.png" alt="Screenshot 1.26" /></a>
+    <img src="images/2012- 4.3 Puntenlijst VO - update_Page_16.png" alt="Screenshot 1.26" />
     <a class="nav-button" href="#">Naar boven ↑</a>
   </div>
   <div class="screenshot" id="img-1.27">
     <h2>1.27 - Aansluiting vloer tegen raam oneffen</h2>
-    <a href="images/2012- 4.3 Puntenlijst VO - update_Page_16.png" class="glightbox" data-gallery="screens"><img src="images/2012- 4.3 Puntenlijst VO - update_Page_16.png" alt="Screenshot 1.27" /></a>
+    <img src="images/2012- 4.3 Puntenlijst VO - update_Page_16.png" alt="Screenshot 1.27" />
     <a class="nav-button" href="#">Naar boven ↑</a>
   </div>
   <div class="screenshot" id="img-1.28">
     <h2>1.28 - Rails schuifraam poetsen</h2>
-    <a href="images/2012- 4.3 Puntenlijst VO - update_Page_17.png" class="glightbox" data-gallery="screens"><img src="images/2012- 4.3 Puntenlijst VO - update_Page_17.png" alt="Screenshot 1.28" /></a>
+    <img src="images/2012- 4.3 Puntenlijst VO - update_Page_17.png" alt="Screenshot 1.28" />
     <a class="nav-button" href="#">Naar boven ↑</a>
   </div>
   <div class="screenshot" id="img-1.29">
     <h2>1.29 - Front staat scheef</h2>
-    <a href="images/2012- 4.3 Puntenlijst VO - update_Page_17.png" class="glightbox" data-gallery="screens"><img src="images/2012- 4.3 Puntenlijst VO - update_Page_17.png" alt="Screenshot 1.29" /></a>
+    <img src="images/2012- 4.3 Puntenlijst VO - update_Page_17.png" alt="Screenshot 1.29" />
     <a class="nav-button" href="#">Naar boven ↑</a>
   </div>
   <div class="screenshot" id="img-1.30">
     <h2>1.30 - Beschadiging glas terrasscherm (rechts)</h2>
-    <a href="images/2012- 4.3 Puntenlijst VO - update_Page_18.png" class="glightbox" data-gallery="screens"><img src="images/2012- 4.3 Puntenlijst VO - update_Page_18.png" alt="Screenshot 1.30" /></a>
+    <img src="images/2012- 4.3 Puntenlijst VO - update_Page_18.png" alt="Screenshot 1.30" />
     <a class="nav-button" href="#">Naar boven ↑</a>
   </div>
   <div class="screenshot" id="img-1.31">
     <h2>1.31 - Terrasscherm poetsen</h2>
-    <a href="images/2012- 4.3 Puntenlijst VO - update_Page_18.png" class="glightbox" data-gallery="screens"><img src="images/2012- 4.3 Puntenlijst VO - update_Page_18.png" alt="Screenshot 1.31" /></a>
+    <img src="images/2012- 4.3 Puntenlijst VO - update_Page_18.png" alt="Screenshot 1.31" />
     <a class="nav-button" href="#">Naar boven ↑</a>
   </div>
   <div class="screenshot" id="img-1.32">
     <h2>1.32 - Alu afkasting hoekaansluiting staat scheef</h2>
-    <a href="images/2012- 4.3 Puntenlijst VO - update_Page_19.png" class="glightbox" data-gallery="screens"><img src="images/2012- 4.3 Puntenlijst VO - update_Page_19.png" alt="Screenshot 1.32" /></a>
+    <img src="images/2012- 4.3 Puntenlijst VO - update_Page_19.png" alt="Screenshot 1.32" />
     <a class="nav-button" href="#">Naar boven ↑</a>
   </div>
   <div class="screenshot" id="img-1.33">
     <h2>1.33 - Voeg boven alu afkasting bijwerken</h2>
-    <a href="images/2012- 4.3 Puntenlijst VO - update_Page_19.png" class="glightbox" data-gallery="screens"><img src="images/2012- 4.3 Puntenlijst VO - update_Page_19.png" alt="Screenshot 1.33" /></a>
+    <img src="images/2012- 4.3 Puntenlijst VO - update_Page_19.png" alt="Screenshot 1.33" />
     <a class="nav-button" href="#">Naar boven ↑</a>
   </div>
   <div class="screenshot" id="img-1.34">
     <h2>1.34 - Isolatie zichtbaar</h2>
-    <a href="images/2012- 4.3 Puntenlijst VO - update_Page_20.png" class="glightbox" data-gallery="screens"><img src="images/2012- 4.3 Puntenlijst VO - update_Page_20.png" alt="Screenshot 1.34" /></a>
+    <img src="images/2012- 4.3 Puntenlijst VO - update_Page_20.png" alt="Screenshot 1.34" />
     <a class="nav-button" href="#">Naar boven ↑</a>
   </div>
   <div class="screenshot" id="img-1.35">
     <h2>1.35 - Kleine beschadiging lak</h2>
-    <a href="images/2012- 4.3 Puntenlijst VO - update_Page_20.png" class="glightbox" data-gallery="screens"><img src="images/2012- 4.3 Puntenlijst VO - update_Page_20.png" alt="Screenshot 1.35" /></a>
+    <img src="images/2012- 4.3 Puntenlijst VO - update_Page_20.png" alt="Screenshot 1.35" />
     <a class="nav-button" href="#">Naar boven ↑</a>
   </div>
   <div class="screenshot" id="img-1.36">
     <h2>1.36 - Beplating staat los</h2>
-    <a href="images/2012- 4.3 Puntenlijst VO - update_Page_21.png" class="glightbox" data-gallery="screens"><img src="images/2012- 4.3 Puntenlijst VO - update_Page_21.png" alt="Screenshot 1.36" /></a>
+    <img src="images/2012- 4.3 Puntenlijst VO - update_Page_21.png" alt="Screenshot 1.36" />
     <a class="nav-button" href="#">Naar boven ↑</a>
   </div>
   <div class="screenshot" id="img-1.37">
     <h2>1.37 - Kras in balustrade</h2>
-    <a href="images/2012- 4.3 Puntenlijst VO - update_Page_21.png" class="glightbox" data-gallery="screens"><img src="images/2012- 4.3 Puntenlijst VO - update_Page_21.png" alt="Screenshot 1.37" /></a>
+    <img src="images/2012- 4.3 Puntenlijst VO - update_Page_21.png" alt="Screenshot 1.37" />
     <a class="nav-button" href="#">Naar boven ↑</a>
   </div>
   <div class="screenshot" id="img-1.38">
     <h2>1.38 - Onderprofiel los + kras erop</h2>
-    <a href="images/2012- 4.3 Puntenlijst VO - update_Page_22.png" class="glightbox" data-gallery="screens"><img src="images/2012- 4.3 Puntenlijst VO - update_Page_22.png" alt="Screenshot 1.38" /></a>
+    <img src="images/2012- 4.3 Puntenlijst VO - update_Page_22.png" alt="Screenshot 1.38" />
     <a class="nav-button" href="#">Naar boven ↑</a>
   </div>
-  <script src="script.js"></script>
 </body>
 </html>
